--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "node ./src/bin/www",
-		"dev": "nodemon ./src/bin/www"
+		"start": "node ./src/app.js",
+		"dev": "nodemon ./src/app.js"
 	},
 	"dependencies": {
 		"ejs": "^3.1.2",
 		"express": "^4.17.1"
 	},
 	"devDependencies": {
-		"chalk": "^4.0.0"
+		"chalk": "^4.0.0",
+		"nodemon": "^2.0.7"
 	}
 }
